--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
     </form>
   </div>
 
+  <div class="coffee-button">
+    <a href='https://ko-fi.com/N4N41DDL3Y' target='_blank'><img height='36' style='border:0px;height:36px;' src='https://storage.ko-fi.com/cdn/kofi6.png?v=6' border='0' alt='Buy Me a Coffee at ko-fi.com' /></a>
+  </div>
+
+  
+
   <script src="aws_cloud_practitioner_quiz.js"></script>
 </body>
 </html>
