--- a/index.html
+++ b/index.html
@@ -25,11 +25,12 @@
     </form>
   </div>
 
-  <div class="coffee-button">
-    <a href='https://ko-fi.com/N4N41DDL3Y' target='_blank'><img height='36' style='border:0px;height:36px;' src='https://storage.ko-fi.com/cdn/kofi6.png?v=6' border='0' alt='Buy Me a Coffee at ko-fi.com' /></a>
+  <div class="coffee-container">
+    <iframe id='kofiframe' src='https://ko-fi.com/luisramirezcoffee/?hidefeed=true&widget=true&embed=true&preview=true' 
+    style='border-radius: 55px;border: 2px solid rgb(255, 255, 255);box-shadow: 5px 10px red;' 
+    height='670' 
+    title='luisramirezcoffee'></iframe>
   </div>
-
-  
 
   <script src="aws_cloud_practitioner_quiz.js"></script>
 </body>
