changin style and name of the webpage

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Step-by-Step Exam</title>
+  <title>AWS Practice Exams</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="container">
-    <h1>Mock Exam</h1>
+    <h1>AWS Certified Cloud Practitioner Practice Exams</h1>
     
     <!-- Progress Bar -->
     <div class="progress-bar">
