--- a/index.html
+++ b/index.html
@@ -14,37 +14,38 @@
     <button id="startExamBtn" class="submit-btn">Start Exam</button>
   </div>
 
-  <!-- Main Exam Content (Hidden initially) -->
+  <!-- Main Exam Content -->
   <div class="container" id="examContent" style="display: none;">
-    <h1>AWS Certified Cloud Practitioner Practice Exams</h1>
+    <div class="exam-main">
+      <h1>AWS Certified Cloud Practitioner Practice Exams</h1>
 
-    <!-- Timer -->
-    <div class="timer" id="timer">Time Remaining: 02:00:00</div>
+      <!-- Timer -->
+      <div class="timer" id="timer">Time Remaining: 02:00:00</div>
 
-    <!-- Progress Bar -->
-    <div class="progress-bar">
-      <div class="progress-fill" id="progressFill"></div>
+      <!-- Progress Bar -->
+      <div class="progress-bar">
+        <div class="progress-fill" id="progressFill"></div>
+      </div>
+
+      <form id="examForm">
+        <div id="question-container"></div>
+
+        <div class="button-group">
+          <button type="button" class="submit-btn" id="backBtn">Back</button>
+          <button type="button" class="submit-btn" id="nextBtn">Next</button>
+          <button type="button" class="try-again-btn" id="tryAgainBtn" style="display:none;">Try Again</button>
+        </div>
+
+        <div class="result" id="result"></div>
+      </form>
     </div>
 
-    <form id="examForm">
-      <div id="question-container"></div>
-
-      <button type="button" class="submit-btn" id="nextBtn">Next</button>
-      <button type="button" class="try-again-btn" id="tryAgainBtn" style="display:none;">Try Again</button>
-
-      <div class="result" id="result"></div>
-    </form>
+    <!-- Sidebar for Questions List -->
+    <div class="question-sidebar">
+      <h3>Questions</h3>
+      <ul id="questionListItems"></ul>
+    </div>
   </div>
-
-  <script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
-  <script>
-    kofiWidgetOverlay.draw('luisramirezcoffee', {
-      'type': 'floating-chat',
-      'floating-chat.donateButton.text': 'Support Me',
-      'floating-chat.donateButton.background-color': '#00b9fe',
-      'floating-chat.donateButton.text-color': '#fff'
-    });
-  </script>
 
   <script src="aws_cloud_practitioner_quiz.js"></script>
 </body>
